Fix: fixed non-index header justify alignment
other things too idk

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -121,7 +121,6 @@ header {
     padding-top: 1rem;
     padding-bottom: 5rem;
 
-    text-align: justify;
 }
 
 h2 {
@@ -175,6 +174,9 @@ section {
     margin-top: 6rem;
     margin-bottom: 6rem;
     border-radius: 1vh;
+
+    text-align: justify;
+
 }
 
 /* Profile pic with subtle glow + hover */
@@ -245,12 +247,6 @@ section {
     width: 100%;
 }
 
-/*debugging thing thanks jippity*/
-/* * {
-    outline: 1px solid red;
-} */
- 
-
 .projects {
    margin-top: 5rem;
    display: grid;
@@ -287,16 +283,6 @@ section {
     flex: 0 0 auto;
 }
 /* Trying to merge the below div things into one */
-
-.about-section-content #about div {
-    line-height: 1.6;
-    /*font-size: rem;*/
-    width: 65%;
-    max-width: 600px;    /* keeps text from getting too wide */
-    flex-shrink: 0;
-    word-wrap: break-word;
-    flex: 0 0 auto;
-}
 
 #projects div {
     line-height: 1.6;
@@ -398,3 +384,8 @@ main {
     /*padding: 10px 5%; fix horizontal scrollbar*/
     
 }
+
+/*debugging thing thanks jippity*/
+/* * {
+    outline: 1px solid red;
+} */
